--- a/style.css
+++ b/style.css
@@ -49,6 +49,7 @@ p {
 
 .box-container {
   width: 80%;
+  max-width: 800px;
   margin: 100px auto;
   display: grid;
   grid-template-columns: repeat(4, 1.3fr);
