--- a/style.css
+++ b/style.css
@@ -30,7 +30,8 @@ ul {
 
 a {
   text-decoration: none;
-  font-weight: 800;
+  font-weight: bold;
+  color: #5553b7;
 }
 
 ul li {
@@ -43,7 +44,7 @@ p {
   word-wrap: normal;
   font-size: 15px;
   color: rgb(92, 90, 90);
-  font-weight: 800;
+  font-weight: 600;
   margin: 0;
 }
 
